Fix outline overlapping for child Item components

--- a/packages/frontend/src/features/Design/components/Interactive/components/Items/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/components/Items/index.module.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
+    gap: 1px;
 
     overflow-y: auto;
 
